--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+
+
+    //log
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'de.mindpipe.android', name: 'android-logging-log4j', version: '1.0.2'
 }
